refactor: simplify collection operation in getEmployeesLeaveStatus method